# auto-autoresearch

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  baselines.json  campaign.py  cli.py  evaluate.py  experiment.py  method.md  prepare.py  pyproject.toml  reset.py  restore_tsp.py  study.py  study.sh  test_contracts.py  test_evaluate.py  test_prepare.py  test_record.py  test_smoke.py  trials.sh
human/: campaign.py  cli.py  design.md  experiment.py  reset.py  shutdown.py
lab/: program.md  record.py  train.py
scientist/: __init__.py  guidance.md  prepare.py  program.md
scientist/facloc/: best_known.json  memory.md  prepare.py  program.md  train.py
scientist/gc/: bench_numba.py  best_known.json  memory.md  prepare.py  program.md  train.py
scientist/gc/baselines/: myciel5.col
scientist/graph_colouring/: prepare.py  program.md  train.py
scientist/lop/: best_known.json  memory.md  prepare.py  program.md  train.py
scientist/maxsat/: best_known.json  memory.md  prepare.py  program.md  train.py
scientist/qap/: best_known.json  memory.md  prepare.py  program.md  train.py
scientist/tsp/: prepare.py  program.md  train.py
supervisor/: IDEAS.md  JOURNAL.md  evaluate.py  ideas.md  journal.md  method.md  reflections.md  studies.py  study.py  study_results.csv  study_summary.md
tests/: test_contracts.py  test_contracts_fl.py  test_contracts_gc.py  test_contracts_maxsat.py  test_contracts_qap.py  test_evaluate.py  test_prepare.py  test_prepare_fl.py  test_prepare_gc.py  test_prepare_maxsat.py  test_prepare_qap.py  test_smoke.py
(+4 files in other folders)
