[project]
name = "auto-autoresearch"
version = "0.1.0"
description = "Autoresearching how to do autoresearch"
requires-python = ">=3.13"
dependencies = ["numpy", "scipy", "numba"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supervisor", "scientist"]
include = ["experiment.py"]

[project.scripts]
experiment = "experiment:main"
studies = "supervisor.studies:main"
evaluate = "supervisor.evaluate:main"
reset = "reset:main"
