[project]
name = "auto-autoresearch"
version = "0.1.0"
description = "Autoresearching how to do autoresearch"
requires-python = ">=3.13"
dependencies = ["numpy", "scipy"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supervisor", "scientist", "human"]

[project.scripts]
experiment = "human.experiment:main"
evaluate = "supervisor.evaluate:main"
reset = "human.reset:main"
shutdown = "human.shutdown:main"
